--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = { text = "MIT" }
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "tomli (>=2.2.1,<3.0.0)"
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
